@@ -1,80 +1,120 @@
-rs_lx2p3,rs_pa2
-nf_10,nf_10f
-congo_11s10,congo_20s10k
-sc_18,sc_18s11
-sc_18n,sc_18n11
-ratfink,startreb
-missworld,kissc
-penthouse,hglbtrtb
+# These are all the aliases pre-defined in the VPinMame executable. You do not need to add them to your local version (unless you want to override something).
+acdcluci,acd_170hc
+rockyle,ali
+thething,ali
+star_tours,alpok_f6
+LogansRun,Arena
 blkou_hf,blkou_l1
-christmasp,playboy
-Onward,skatebll
-tftc_400c,tftc_400
-Encanto,ngndshkr
-nfl_sea,nfl
-nfl_san,nfl
+bnzai_p1,bnzai_pa
+goldfinger,bond
+batmn,btmn_101
+bttf,bttf_a20
+cc_13D,cc_13
+chkpnt,ckpt_a17
+congo_11s10,congo_20s10k
+blaze,csmic_l1
+elektraapredator,elektraa
+elvisjt,elvis
+grease,elvis
+greasem,elvis
+eshak_l1,esha_la1
+eshak_l3,esha_la3
+eshak_f1,esha_pr4
+freefallp,freefall
+geniecbbb,genie
+gnr,gnr_300
+godzillabwpup,godzilla
+gs_l3,gs_la3
+gs_l4,gs_lu4
+FF,gw_l5
+harley,harl_a10
+penthouse,hglbtrtb
+safeaus,HighHand_1973
+hook,hook_408
+Raya,hothand
+beetljui,ironmaid
+jplstwld,jplstw22
+jurpark,jupk_513
+missworld,kissc
+kpv106,kpb105
+lah,lah_112
+lostwrld_gunship,lostwrld
+lw3,lw3_208
+lwar,lwar_a83
+maverick,mav_401
+mnfb,mnfb_c27
+tennmnfb_c27,mnfb_c27
+deathproof,mousn_l4
+mousn_lx,mousn_l4
+mtl_180hcm,mtl_180hc
+nf_10,nf_10f
+nfl_ari,nfl
+nfl_atl,nfl
+nfl_bal,nfl
+nfl_buf,nfl
+nfl_car,nfl
 nfl_chi,nfl
 nfl_cin,nfl
-nfl_buf,nfl
-nfl_den,nfl
 nfl_cle,nfl
-nfl_tam,nfl
-nfl_ari,nfl
-nfl_lac,nfl
-nfl_kan,nfl
-nfl_ind,nfl
 nfl_dal,nfl
-nfl_mia,nfl
-nfl_phi,nfl
-nfl_atl,nfl
-nfl_nyg,nfl
-nfl_jac,nfl
-nfl_nyj,nfl
+nfl_den,nfl
 nfl_det,nfl
 nfl_gre,nfl
-nfl_car,nfl
-nfl_rai,nfl
-nfl_lar,nfl
-nfl_bal,nfl
-nfl_was,nfl
-nfl_pat,nfl
-nfl_sai,nfl
-nfl_pit,nfl
 nfl_hou,nfl
-nfl_ten,nfl
+nfl_ind,nfl
+nfl_jac,nfl
+nfl_kan,nfl
+nfl_lac,nfl
+nfl_lar,nfl
+nfl_mia,nfl
 nfl_min,nfl
-cc_13D,cc_13
-blaze,csmic_l1
-FF,gw_l5
-Raya,hothand
-playboystentacle,playboys
-ffdp,rock
-tennmnfb_c27,mnfb_c27
-elektraapredator,elektraa
-thething,ali
-LABYRINTH,skatebll
-freefallp,freefall
-beetljui,ironmaid
-stestc,stest
-startreb4,startreb
-T1D_123_riccione,T1D_123
-deathproof,mousn_l4
-twd_156ld,twd_156h
-sexygirl,playboyb
-elvisjt,elvis
-greasem,elvis
-grease,elvis
-acdcluci,acd_170hc
-LogansRun,Arena
-madmax,twst_405
-rockyle,ali
-safeaus,HighHand_1973
-Class1984,seawitch
-geniecbbb,genie
-godzillabwpup,godzilla
-lostwrld_gunship,lostwrld
+nfl_nyg,nfl
+nfl_nyj,nfl
+nfl_pat,nfl
+nfl_phi,nfl
+nfl_pit,nfl
+nfl_rai,nfl
+nfl_sai,nfl
+nfl_san,nfl
+nfl_sea,nfl
+nfl_tam,nfl
+nfl_ten,nfl
+nfl_was,nfl
+Encanto,ngndshkr
 incredibles,panther7
-goldfinger,bond
-mtl_180hcm,mtl_180hc
-star_tours,alpok_f6
+play,play_a24
+christmasp,playboy
+sexygirl,playboyb
+playboystentacle,playboys
+poto,poto_a32
+rab,rab_130
+robo,robo_a34
+ffdp,rock
+rs_lx2p3,rs_pa2
+sc_18n,sc_18n11
+sc_18,sc_18s11
+Class1984,seawitch
+simp,simp_a27
+LABYRINTH,skatebll
+Onward,skatebll
+southpk,sprk_103
+ssvc,ssvc_a26
+ratfink,startreb
+startreb4,startreb
+stestc,stest
+stwarde,stwr_103
 swrds_l2FO,swrds_l2
+swtril,swtril43
+T1D_123_riccione,T1D_123
+tftc,tftc_303
+tftc_400c,tftc_400
+tmach,tmac_a24
+tmnt,tmnt_104
+tommy,tomy_400
+torpe,torp_e21
+trek,trek_201
+truckstp,trucksp2
+twd_156ld,twd_156h
+madmax,twst_405
+twister,twst_405
+wwfrumb,wwfr_103
