@@ -7,6 +7,7 @@ Version 3.7 (XX XXth, 2025) - ""
 ------------------------------------------------------------------------------
 
 Add windows COM method PMBuildVersion returning 30700.4711 with build number as decimal.
+Easier to upgrade: Rename VPMAlias.txt to VPMAlias_template.txt they are now all compiled in to VPinMAME. VPMAlias.txt now only need your personal entries.
 
 *** ROM SUPPORT *** Thanks to Tom Collins
 Clones:
